--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13033249.md#1" target="_blank">【名家专栏】谁收买谁？美富豪向中共屈膝</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13033249.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13033259-shutterstock_1324038479-150x120.jpg" align ="left"></a>路透社（Reuters）的头条文章说：“贝莱德集团（BlackRock，又称黑岩集团，一家大型华尔街投资基金）在中国财富管理领域拓展了业务。”它应该说：“北京挟持了贝莱德及其首席执行官（CEO）拉里?芬克（Larry Fink）。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月20日 1:55 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13033380.md#1" target="_blank">岳山：董经纬事件背后的国安内幕</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13033380.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13031013-503097-150x120.png" align ="left"></a>中共国安部副部长董经纬“叛逃”事件，连日来引发国际舆论关注。特别是中共官方变相辟谣与美国有媒体曝光出逃细节形成对战，使事件堕入罗生门，扑朔迷离。同时这也让中共国安系的神秘复杂再次受到外界聚焦。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 11:11 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032944.md#1" target="_blank">唐付民：法制国家的标准</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032944.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13013972-1200-800-150x120.jpg" align ="left"></a>时下，中美两个世界大国已经渐成“势不两立”的状态，尽管双方也在宣称“和平竞争或和平发展”。然而，自欺欺人的时期似乎已经无法继续维持！因为人类文明进步的基本价值无法容忍两种“天壤之别”文明标准的和平共处！利用“法律”参与战斗已经成为双方的共同选项，如何评判“法制国家”显得尤为重要！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 6:28 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032792.md#1" target="_blank">苦胆：君子不立于红墙之下</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032792.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13032801-shenzhen--150x120.jpeg" align ="left"></a>深圳赛格大厦自今年5月18日至20日，连续三天摇晃，迄今未查明原因。赛格大厦日后会不会躺平，目前尚不得而知。不过，这幢“边设计边施工”的赛格大厦非比寻常，它创下过每2.7天盖一层楼的“深圳速度”，后又成为特区的地标性建筑，这岂是一般的高楼大厦所能望其项背的。赛格，这幢赛过通常规格的高楼，在一个盛产“豆腐渣工程”的国家站.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 3:46 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/18/n13032005.md#1" target="_blank">王赫：中共控制东南亚的野心与途径</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/18/n13032005.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1LY6II-600x400-150x120.jpg" align ="left"></a>中共的全球野心，一大落脚点在“周边外交”，而东南亚则是“周边外交”的战略重点，并已取得若干进展（菲律宾杜特尔特政府转变对华政策就是个典型例子）。国际社会反制中共，需要认清中共对东南亚——东盟——的野心与途径，有效应对。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 2:52 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032577.md#1" target="_blank">乾元：中共大学官僚化是大学恶性案件的渊薮</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032577.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13032633-7b3d2b971d31d0bbce06ffeed4fefbe0-800x450-150x120.jpeg" align ="left"></a>近来高校命案频发。前者，复旦大学留美数学博士姜文华挥刀砍死学院党委书记；近者，哈尔滨工程大学副校长张志俭又坠楼自杀。何以本来是学者云集、坐而论道的弦歌之地反倒成了刀光剑影的市井黑社会了呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 1:15 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/18/n13032000.md#1" target="_blank">钟原：李克强吉林考察再曝百姓困境</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/18/n13032000.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13032013-GettyImages-1231745092-150x120.jpg" align ="left"></a>6月15日至16日，李克强在吉林省松原、长春考察。中共国务院文章连发5篇文章，又透露了党媒不愿意报导的细节。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 10:32 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032119.md#1" target="_blank">沈舟：卡尔文森号航母全新舰队抵夏威夷</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032119.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13032130-51252999437_b88e466a82_k-150x120.jpg" align ="left"></a>西方各国关注台海局势，中共却偏要摆出挑衅架势，6月15日忽然派出大批军机骚扰台海。美军应该早料到中共可能的反应，也进行了有针对性的部署。里根号航母（CVN76）6月14日就进入南海，展示在恶劣天气下继续舰载机起降训练；美利坚号两栖舰队与日本海上自卫队也在菲律宾海联合演练；美军侦察机也不断在中国沿海侦察。
 
@@ -22,20 +28,9 @@
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13028039.md#1" target="_blank">【有冇搞错】又一招“黑虎掏心”？</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13028039.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13028803-0896d8d4cacdfd44e52551cee9bb99dc-150x120.jpg" align ="left"></a>香港警方拘捕了香港《苹果日报》五名高层管理人员，然后再出动大批人员搜查《苹果日报》。被抓的包括壹传媒总裁张剑虹，营运总裁周达权，《苹果日报》副社长陈沛敏，总编辑罗伟光，和苹果动新闻总监张志伟。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 9:15 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13028377.md#1" target="_blank">陈思敏：中国化工产业“低端内卷，高端躺平”的背后</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13028377.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13028417-GettyImages-1233429279-1--150x120.jpeg" align ="left"></a>湖北十堰爆炸事故震惊全国，同时吓得“不出事不检查”的各地政府随即启动化工和危化品领域的“大检查”。这也引人关注中国的化学工业，而化工产业链被指处于经济安全线的中枢地位。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 6:33 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13028059.md#1" target="_blank">袁斌：西方合围中共 疫情追责剑指武毒所</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13028059.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13028119-wuhan-lab-700x420--150x120.jpeg" align ="left"></a>最近，围绕着新冠疫情溯源问题的形势急转直下，中共再度被推至风口浪尖，面临第二轮追责，而且是力度更大也更严厉的追责。这很可能使中共将在全球范围内面临史无前例的最大挑战！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 4:07 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13028138.md#1" target="_blank">【网海拾贝】中共已成世界秩序最大威胁</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13028138.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13028163-c3618059d5321027fe22571d7c82bc19@1200x1200-1-150x120.jpeg" align ="left"></a>美国之音：中国共产党正大张旗鼓纪念建党百周年，尤其在全球新冠大流行仍未结束之际，试图显示其实力不仅达到自己历来最强，而且已步入替代美国成为世界首强、重塑世界秩序的轨道。中共能否如愿以偿尚不清楚，但它成为美国和世界秩序的最大威胁已是美国朝野共识。今年3月，美国国务卿布林肯在外交政策演说中指出：“中国是美国21世纪面临的最.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 3:52 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/16/n13026959.md#1" target="_blank">王友群：习近平的危言与中共的危局</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/16/n13026959.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13026961-6ba1fa4749047afa0d3edbbe49f527ce-1-150x120.png" align ="left"></a>2021年，是中共成立100年。一方面，中共宣传机器正大张旗鼓宣传百年中共所谓的“辉煌历史”和“伟大成就”；另一方面，中共党魁习近平却屡出危言，语惊党内外，爆中共正面临亡党危机。
-
-1月22日，习近平在十九届中纪委五次全会上说，腐败仍是中共最大威胁。1月23日，新华社发表解读文章称：“政治腐败是最大的腐败。一些腐败.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 2:50 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13027294.md#1" target="_blank">王赫： 抗击中共 西方正在战略重整</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13027294.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13022879-c3618059d5321027fe22571d7c82bc19@1200x1200-600x400-1-150x120.jpeg" align ="left"></a>这几天，西方世界的三大峰会——G7峰会、北约峰会、美欧峰会——接连召开，剑指中共。这有特别重大的意义：如果说2020年是以大瘟疫肆虐世界和美中新冷战为标志的，那么2021年将以西方国家的战略重整写进历史。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 12:42 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13027325.md#1" target="_blank">钟原：美俄力避冲突 中共陷孤立</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13027325.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13027348-GettyImages-1233491283-150x120.jpg" align ="left"></a>美俄峰会的各自声明，都专注于避免冲突。俄罗斯不会参与美中对抗，这应该是拜登和普京会面需要互相确认的核心内容之一。中共千方百计要拉拢俄罗斯，组建反美、反西方的轴心国，如今中共正式成为了孤立的轴心。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 12:25 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13027244.md#1" target="_blank">影评：英雄的壮举（中）</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13027244.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/10/2dd96510b305841a89ec3c27e6b3fc04-600x400-150x120.jpg" align ="left"></a>
-四、都有不同的故事
-他们并不是孤单的受害者。在中共迫害国人的一次又一次运动中，不同的家庭不同的人，都有不同的故事。讲出来看看吧：
-
-被迫害致死的精英教师的后人，讲出来看看！
-被打压致死的文革里的冤魂，讲出来看看！
-那些青年学子的伴侣、亲人，天安门受难者的母亲，讲出来看看！
-千千万万善良修炼人的亲友家人.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 8:34 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13032288.md#1" target="_blank">王友群：毛泽东的接班人王洪文之死</a><br></h3>中共独裁者毛泽东选的第一个接班人刘少奇，1969年11月12日，被毛整死。第二接班人林彪，遭到毛的连番痛击后，1971年9月13日，在蒙古温都尔汗坠机身亡。之后，毛提出，要选一个年纪小的、学问少的、立场坚定的人来接班。经再三考虑，1973年，毛选定了他的第三个接班人王洪文。
+王洪文被抓捕
+1976年9月9日，毛泽东.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 10:57 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/18/n13031946.md#1" target="_blank">刘青：复旦杀手为何广受同情？</a><br></h3>大陆社会现今弥漫浓厚戾气，恶性杀人、随意杀人案件层出不穷，造成大陆莫名的恐慌氛围。在诸多众人谴责的恶性杀人事件外，复旦大学特聘教授姜文华持刀杀死党委书记王永珍一案，凶手却意外获得广泛一面倒的同情甚至赞扬。以致复旦大学为此特意发布公告，表示强烈谴责“是非颠倒、黑白不分的网络言论”。复旦大学甚至发起网上募捐活动，要为被杀的.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 5:13 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/18/n13030600.md#1" target="_blank">中共罪行录之二十八：切菜切出反革命</a><br></h3>这是《黑五类忆旧》这本书里收录的一个发生在文革中的真实的故事。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 2:31 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/18/n13030050.md#1" target="_blank">石铭：“六一零”日子前的疯狂</a><br></h3>今年是第22个“六一零”的日子，进入六月份以来中共政法委、610又在兴风作浪，制造多起恶性绑架冤判法轮功学员事件。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 10:14 AM			</td></tr>
@@ -63,7 +58,5 @@
 燕燕歌舞妙。
 
 责任编辑.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 10:03 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13027569.md#1" target="_blank">戴安娜：在中国，逃无可逃</a><br></h3>如果在中国国内长大，长期受到洗脑教育，后遗症很严重，很多人产生了一种幻觉：如果我一直保持沉默，远离政治远离体制，就能远离暴行和谎言，保得平安。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 11:14 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/16/n13027183.md#1" target="_blank">九天剑：口炮是你的 子宫是我的</a><br></h3>滚刀肉一般的匪共这次终于吓到了。从70年前在那条红船上秘谋煽颠，到8964派20万匪兵开到广场杀平民，它从来没见过今天这场面——韭菜躺一地，冲着它冷笑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月17日 9:36 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rjhtvd372/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/rjhtvd372/djy/blob/master/gb/news392_3.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rjhtvd372/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_3.htm">https://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://github.com/rjhtvd372/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
