--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,6 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13043039.md#1" target="_blank">涉侵犯人权 五中企被美国列入出口黑名单</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13043039.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12953153-GettyImages-168292900-320x200.jpg" align ="left"></a>周三（6月23日），美国政府对对五家中国公司实施制裁，对它们限制出口。美方表示，这些中国公司与中共侵犯人权行为有牵连，受制裁的中企包括太阳能电池板行业的多晶硅大.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 8:02 AM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042261.md#1" target="_blank">50城响应“全球行动日”抵制北京冬奥会</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042261.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042953-MG_7181-600x400-1-150x120.jpg" align ="left"></a>第二十四届冬季奥运会将于2022年2月在北京举行。在6月23日国际奥运日之际，全球数十个国家发起“全球行动日”，共同呼吁抵制北京冬奥会，由侵犯人权的政府主办奥运会违背奥林匹克精神。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 2:09 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13040108.md#1" target="_blank">谴责中共强摘器官 弗吉尼亚州费市通过决议</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13040108.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042447-Screen-Shot-2021-06-23-at-11.02.59-AM-150x120.png" align ="left"></a>6月22日晚，美国弗吉尼亚州费尔法克斯市（City of Fairfax）议会投票，一致通过一项决议案，谴责中共强摘法轮功学员等良心犯器官，并警示当地居民前往中国做器官移植的风险。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 1:52 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13040700.md#1" target="_blank">【中共党史】配合苏联肢解中国 分裂新疆</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13040700.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13022879-c3618059d5321027fe22571d7c82bc19@1200x1200-600x400-1-150x120.jpeg" align ="left"></a>上文（系列五-六）我们看到，中共是如何配合苏联把外蒙古肢解出去。同外蒙古一样，新疆也是苏联苦心积累要割裂出来的中国领土，其手法也同它策动蒙古独立相类似，而在这个过程中，其豢养的中共也是积极配合它肢解中国。新疆虽然最后没有独立出去，却如今成为中共一个烫手山芋，也是成为威胁中国统一的一个隐患。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 1:39 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042538.md#1" target="_blank">苹果日报6月24日停运 社论主笔被捕</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042538.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042562-ttl7dayxlj_encrypt6480087949523534174-150x120.jpg" align ="left"></a>中共强施“港版国安法”以来，香港的新闻及言论自由遭受严重打压。继6月17日警方大搜捕壹传媒旗下《苹果日报》的5名高层、500名国安警察查抄苹果大楼后，相隔不足一周，警方6日23日清晨再以国安法“勾结外国”罪拘捕《苹果日报》的“蘋论”专栏主笔李平。壹传媒创办人黎智英前顾问Mark Simon近日也向外媒透露，有不明人士威胁《苹果》员工，称香港警察还会再次到总部.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 12:30 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041284.md#1" target="_blank">苹果日报关门 员工吐露心声 吁同行坚守</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041284.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/2008100439102478-150x120.jpg" align ="left"></a>运行26年的香港《苹果日报》将被迫关闭，该报员工表示，报纸受到广大香港市民的支持和喜爱，它的关闭标志着“一个时代的结束”。中共前外交官陈用林认为，香港早已沦陷。中共从政治、军事、舆论等方方面面严控香港、打压香港只是第一步，是为武统台湾做准备。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月23日 11:31 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042268.md#1" target="_blank">佛州州长签法案：高中生要知共产主义邪恶</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042268.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042275-ron-desantis-1200x800-150x120.jpeg" align ="left"></a>佛罗里达州州长罗恩?德桑蒂斯（Ron DeSantis）周二（6月22日）签署三项法案。其中一项要求本州高中生了解“共产主义的罪恶”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月23日 11:15 PM							</td></tr>
@@ -32,6 +33,5 @@
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13038130.md#1" target="_blank">旅美港人谈苹果日报事件 “昔日香港不再”</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13038130.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13038169-PXL_20210612_235725324-150x120.jpg" align ="left"></a>近日香港《苹果日报》将关闭的消息令海外港人哗然，在香港的民众更是以行动支持纷纷购买《苹果日报》，旅美港人也对“苹果”事件发表看法。
 打压人权、打压香港《普通法》
 香港资深报人程翔表示，据其所知，这是港史上政府第三次要报社关闭。香港政府此次逮捕《苹果日报》高层、冻结其公司账户，甚至订阅者、广告商户要汇钱给《苹果日报》都不行，程翔认为这很明显就是要断绝《苹果.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 10:58 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/21/n13037552.md#1" target="_blank">建党百年陷前所未有困境 中共还能撑多久</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/21/n13037552.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2012/03/1203112340512320-150x120.jpg" align ="left"></a>中共“建党百年”前，对内极力营造“盛世”景象，同时强力“维稳”封杀异见声音；对外则继续以战狼姿态挑衅国际民主联盟。台湾学者苏紫云向大纪元详细解析，揭开中共在建党百年之际真实的内外交困处境和前所未有的危机。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 8:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rjhtvd372/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/rjhtvd372/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rjhtvd372/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/rjhtvd372/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
